feat: enhance trading bot with dynamic token balance handling and metrics collection
- Updated `scanAndMaybeExecute` to support dynamic amounts based on token balances.
- Introduced `TokenBalanceCache` for caching token balances and `getTokenAccountBalanceAtomic` utility for fetching balances.
- Enhanced `scanPair` to track Jupiter and OpenOcean quote calls, and added metrics collection for trading performance.
- Added new configuration options for minimum notional amounts, cooldowns on losses, and maximum daily losses.
- Implemented metrics logging for various events, including rate limits and execution results.
- Updated environment variables to support new dynamic amount modes and token reserve settings.

--- a/.env.production.example
+++ b/.env.production.example
@@ -15,12 +15,15 @@ POLL_INTERVAL_MS=200
 HEALTHCHECK_PORT=0
 BALANCE_REFRESH_MS=2000
 
-# Dynamic amountA (optional; only applies when pair.aMint == SOL)
-# Uses wallet SOL balance (minus MIN_BALANCE_LAMPORTS) * (bps/10000) as amountA override.
+# Dynamic amountA (optional)
+# - sol_balance: usa saldo SOL (minus MIN_BALANCE_LAMPORTS) * (bps/10000) como override de amountA.
+# - token_balance: usa saldo da ATA do aMint (minus DYNAMIC_AMOUNT_A_TOKEN_RESERVE_ATOMIC) * (bps/10000).
+# Observacao: mesmo em token_balance, voce ainda precisa de SOL para fees.
 DYNAMIC_AMOUNT_A_MODE=off
 DYNAMIC_AMOUNT_A_BPS=0
 DYNAMIC_AMOUNT_A_MIN_ATOMIC=0
 DYNAMIC_AMOUNT_A_MAX_ATOMIC=0
+DYNAMIC_AMOUNT_A_TOKEN_RESERVE_ATOMIC=0
 
 # Execution (defaults; overridden per-service in docker-compose.prod.yml)
 EXECUTION_STRATEGY=atomic
