--- a/config.example.json
+++ b/config.example.json
@@ -6,12 +6,18 @@
       "bMint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
       "amountA": "50000000",
       "amountASteps": ["10000000", "20000000", "50000000"],
+      "minNotionalA": "10000000",
       "slippageBps": 50,
       "slippageBpsLeg2": 100,
       "minProfitA": "0",
       "minProfitBps": 25,
       "cooldownMs": 1500,
+      "cooldownOnLossMs": 60000,
+      "maxTradesPerHour": 60,
+      "maxDailyLossA": "10000000",
       "maxNotionalA": "50000000",
+      "maxPriceImpactBps": 100,
+      "maxRouteHops": 3,
       "computeUnitLimit": 1400000,
       "computeUnitPriceMicroLamports": 0,
       "baseFeeLamports": 5000,
@@ -23,12 +29,18 @@
       "bMint": "cbbtcf3aa214zXHbiAZQwf4122FBYbraNdFqgw4iMij",
       "amountA": "50000000",
       "amountASteps": ["10000000", "20000000", "50000000"],
+      "minNotionalA": "10000000",
       "slippageBps": 50,
       "slippageBpsLeg2": 100,
       "minProfitA": "0",
       "minProfitBps": 25,
       "cooldownMs": 1500,
+      "cooldownOnLossMs": 60000,
+      "maxTradesPerHour": 60,
+      "maxDailyLossA": "10000000",
       "maxNotionalA": "50000000",
+      "maxPriceImpactBps": 100,
+      "maxRouteHops": 3,
       "computeUnitLimit": 1400000,
       "computeUnitPriceMicroLamports": 0,
       "baseFeeLamports": 5000,
@@ -40,12 +52,18 @@
       "bMint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
       "amountA": "50000000",
       "amountASteps": ["10000000", "20000000", "50000000"],
+      "minNotionalA": "10000000",
       "slippageBps": 50,
       "slippageBpsLeg2": 100,
       "minProfitA": "0",
       "minProfitBps": 25,
       "cooldownMs": 1500,
+      "cooldownOnLossMs": 60000,
+      "maxTradesPerHour": 60,
+      "maxDailyLossA": "10000000",
       "maxNotionalA": "50000000",
+      "maxPriceImpactBps": 100,
+      "maxRouteHops": 3,
       "computeUnitLimit": 1400000,
       "computeUnitPriceMicroLamports": 0,
       "baseFeeLamports": 5000,
