feat: add dynamic blacklist handling and config hot reload functionality

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ MODE=dry-run
 # - hft: reduz logs (LOG_VERBOSE default=false) e restringe OpenOcean para evitar ban/rate-limit.
 BOT_PROFILE=default
 CONFIG_PATH=./config.json
+CONFIG_RELOAD_MS=0
+BLACKLIST_PATH=
+BLACKLIST_MINTS=
+BLACKLIST_PAIRS=
 POLL_INTERVAL_MS=500
 HEALTHCHECK_PORT=0
 BALANCE_REFRESH_MS=2000
