--- a/.env.production.example
+++ b/.env.production.example
@@ -11,6 +11,10 @@ WALLET_SECRET_KEY=
 MODE=live
 BOT_PROFILE=hft
 CONFIG_PATH=/app/config.json
+CONFIG_RELOAD_MS=5000
+BLACKLIST_PATH=/app/blacklist.json
+BLACKLIST_MINTS=
+BLACKLIST_PAIRS=
 POLL_INTERVAL_MS=200
 HEALTHCHECK_PORT=0
 BALANCE_REFRESH_MS=2000
